# ACM-Compiler

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  TESTING.md  asm_builder.py  asm_operand.py  asm_regalloc.py  asm_repr.py  asm_utils.py  builtin.c  ir_builder.py  ir_renamer.py  ir_repr.py  ir_utils.py  main.py  opt_dce.py  opt_globalvar.py  opt_liveness_analysis.py  opt_mem2reg.py  opt_mir.py  opt_utils.py  requirements.txt  scope.py  syntax_checker.py  syntax_checker_test.py  syntax_error.py  syntax_recorder.py  test-guide-draft.md  type.py  types.py
antlr/: MxLexer.g4  MxParser.g4
antlr_generated/: MxLexer.interp  MxLexer.py  MxLexer.tokens  MxParser.interp  MxParser.py  MxParserVisitor.py
dominator/: CMakeLists.txt  __init__.py  dominance_frontier.cpp  dominance_frontier.h  dominance_frontier_test.cpp  dominator.cpp  dominator.pyi  dominator_tree.h  dynamic_bitset.h  predecessor_set.h
mxc/backend/: asm_builder.py  asm_repr.py  builder_utils.py  operand.py  regalloc.py
mxc/common/: ir_repr.py
mxc/common/dominator/: CMakeLists.txt  __init__.py  dominance_frontier_test.cpp  dominator.cpp  dominator.pyi  dominator_tree.h  dynamic_bitset.h  predecessor_set_test.cpp
mxc/middle_end/: cfg_transform.py  dce.py  globalvar.py  gvn_pre.py  mem2reg.py  (+5 more)
scripts/: antlr-build.bash  antlr-build.zsh  clang-build.bash  clang-build.zsh  pybind11-build-windows.bash  pybind11-build-windows.zsh  pybind11-build.bash  pybind11-build.ps1  pybind11-build.zsh  test_asm.bash  test_asm_all.bash  test_llvm_ir.bash  test_llvm_ir_all.bash
testcases/: reimu
(+40 files in other folders)
